fixed daum map alignment

--- a/css/style.css
+++ b/css/style.css
@@ -123,15 +123,16 @@ a.anchor {
 
 /* Daum map */
 .location {
-    width: 500px;
-    height: 500px;
+    margin: 0 auto;
+    width: 100%;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 .map {
-    width: 500px;
+    width: 80%;
     height: 400px;
     align-self:center;
 }
